--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 I'm a perpetual learner and love reading books that teach me new things. 
                 I enjoy traveling the world whenever I can, fitness and my plant-based meals.
               </p>
-              <span class="d-flex mt-3">
+              <!-- <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
@@ -83,7 +83,7 @@
                 >
                   View Resume
                 </a>
-              </span>
+              </span> -->
             </div>
           </div>
         </div>
