--- a/src/index.html
+++ b/src/index.html
@@ -332,9 +332,9 @@
           <a rel="noreferrer" href="https://twitter.com/de_codinglife" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <!-- <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/hector-jc/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
-          </a> -->
+          </a> 
           <a rel="noreferrer" href="https://github.com/Zocum" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
