--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 
     
     <title>Hector Jimenez Cruz | Developer</title>
-    <meta name="javascript, react, css, html" content="[Zocum], [Hector], Javascript React" />
-    <meta name="I am a React and Vanilla Javascript developer. I am also learning AI, Three.js & Blockchain development. Languages: Spanish, German, English" content="[Hector Jimenez Cruz] | Developer" />
+    <meta name="javascript, react, css, html" content="[Zocum], [Hector], javascript, react, css, html" />
+    <meta name="I am a Frontend Web developer. Real-world languages: Spanish, German, English" content="[Hector Jimenez Cruz] | Developer" />
 
     <link
       rel="stylesheet"
@@ -64,15 +64,16 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a 26-year-old Software Developer who is fascinated with science and tech.
+                I am a 29-year-old Software Developer who is fascinated with science and tech.
                 I come from the volcanic island of La Palma, Canary Islands, 
-                though fate put me in Germany 7 years ago. After having learned German, 
+                though fate put me in Germany 9 years ago. After having learned German, 
                 I set out to try different things in search of an activity that would challenge my creativity and make me feel alive.
                 Programming and astronomy did the trick, and that's the reason you are reading this and why I have a <a id="yt" target="_blank" href="https://www.youtube.com/channel/UCQzQRYnaYL_ZDt5S8CKAIPg">YouTube</a> channel.
               </p>
               <p class="about-wrapper__info-text">
-                I'm a perpetual learner and love reading books that teach me new things. 
-                I enjoy traveling the world whenever I can, fitness and my plant-based meals.
+                I've been programming professionally for 2 years now. I've had a lot of practice in Frontend development, allowing me to gather a great deal of experience in Javascript, Typescript, HTML (including Templating Languages) and CSS (specially SCSS and some PCSS as well).
+                I've also had some practice with React and Next.js, as well as dabbed a bit into Backend, although mostly through private projects. In terms of workflow, I use Git for version control and I am also very familiar with the Atlassian ecosystem (Jira, Bitbucket, Confluence). 
+                VScode has been my IDE of choice for most of the time, but I seem to have fallen under a spell since lately I find myself using Neovim(Lazyvim, also in combo with LazyGit) more and more.
               </p>
               <!-- <span class="d-flex mt-3">
                 <a
@@ -95,7 +96,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title dark-blue-text">Old Beginner Projects on my Github</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -125,7 +126,7 @@
                 >
                   Source Code
                 </a>
-              </div>
+              </div> 
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
@@ -157,7 +158,7 @@
                 <div>
                   <p class="mb-4">
                     Click on a card and experience a beautiful expanding transition.
-                     Made with HTML, CSS & Vanilla Javascript.
+                     Made with HTML, CSS & Javascript.
                   </p>
                 </div>
                 <a
@@ -207,7 +208,7 @@
                 <div>
                   <p class="mb-4">
                     A simple progress bar where you can click on the numbers to complete up to four steps.
-                    Made with HTML, CSS & Vanilla Javascript.
+                    Made with HTML, CSS & Javascript.
                   </p>
                 </div>
                 <a
@@ -250,7 +251,7 @@
           </div>
           <!-- /END Project -->
 
-          <div class="row">
+         <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Face Recognition SmartBrain (in progress)</h3>
@@ -276,12 +277,12 @@
                 >
                   Source Code
                 </a> -->
-              </div>
+           <!--   </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
                 <!-- <a rel="noreferrer" href="#!" target="_blank"> -->
-                  <div
+                 <!-- <div
                     data-tilt
                     data-tilt-max="4"
                     data-tilt-glare="true"
@@ -297,7 +298,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- /END Project -->
         </div>
       </div>
@@ -343,7 +344,7 @@
         <hr />
 
         <p class="footer__text">
-          © 2022 - Template developed by
+          © 2024 - Template developed by
           <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
             >Jacobo Martínez</a> & modified by <a rel="noreferrer" href="https://github.com/Zocum" target="_blank"
             >Héctor Jiménez Cruz</a>
